; ModuleID = '/home/carl/AnghaBench/lab/q3map2/common/extr_bspfile.c_SetLightBytes.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/common/extr_bspfile.c_SetLightBytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lightBytes = common dso_local global i64 0, align 8
@numLightBytes = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"SetLightBytes\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetLightBytes(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @lightBytes, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i64, i64* @lightBytes, align 8
  %7 = call i32 @free(i64 %6)
  br label %8

8:                                                ; preds = %5, %1
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* @numLightBytes, align 4
  %10 = load i32, i32* %2, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  br label %19

13:                                               ; preds = %8
  %14 = load i32, i32* @numLightBytes, align 4
  %15 = call i64 @safe_malloc_info(i32 %14, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i64 %15, i64* @lightBytes, align 8
  %16 = load i64, i64* @lightBytes, align 8
  %17 = load i32, i32* @numLightBytes, align 4
  %18 = call i32 @memset(i64 %16, i32 0, i32 %17)
  br label %19

19:                                               ; preds = %13, %12
  ret void
}

declare dso_local i32 @free(i64) #1

declare dso_local i64 @safe_malloc_info(i32, i8*) #1

declare dso_local i32 @memset(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
